Fix z-indexes & edit btn placement

--- a/sources/stylesheets/_general.scss
+++ b/sources/stylesheets/_general.scss
@@ -51,7 +51,7 @@ body {
     top: 24px;
 
     @include query($tablet-1) {
-      display: none;
+      top: 0;
     }
   }
 }
