--- a/sources/stylesheets/components/_footer.scss
+++ b/sources/stylesheets/components/_footer.scss
@@ -5,6 +5,7 @@
   padding: 0 32px 32px;
   margin: auto auto 0;
   width: calc(100% - 64px);
+  z-index: 0;
 
   &_content {
     &-hidden {
