--- a/sources/stylesheets/utils/_paddings.scss
+++ b/sources/stylesheets/utils/_paddings.scss
@@ -1,6 +1,7 @@
 .pad_ {
   &container {
     padding: 40px 32px 32px;
+    z-index: 1;
 
     @include query($tablet-2) {
       padding: 24px 16px;
